@startuml splendor_config
skinparam backgroundColor #FFFFFF
skinparam linetype ortho
skinparam rankdir LR
skinparam shadowing false
skinparam defaultFontSize 11
skinparam classAttributeIconSize 0
skinparam padding 2
skinparam nodesep 20
skinparam ranksep 30

title Splendor — Config Package (com.splendor.config)

package "com.splendor.config" {
  interface IConfigProvider {
    +loadConfiguration(): void
    +getStringProperty(key: String, defaultValue: String): String
    +getIntProperty(key: String, defaultValue: int): int
  }
  class FileConfigProvider {
    +FileConfigProvider()
    +loadConfiguration(): void
    +getStringProperty(key: String, defaultValue: String): String
    +getIntProperty(key: String, defaultValue: int): int
  }
  class ConfigValidator {
    +{static} validateAll(configProvider: IConfigProvider): void
  }
  class ConfigKeys {
    +{static} WINNING_POINTS: String
    +{static} MAX_TOKENS: String
    +{static} SETUP_2P_GEMS: String
    +{static} SETUP_3P_GEMS: String
    +{static} SETUP_4P_GEMS: String
    +{static} MAX_RESERVED_CARDS: String
    +{static} FILE_CARDS_DATA: String
    +{static} TIER1_CARD_COUNT: String
    +{static} TIER2_CARD_COUNT: String
    +{static} TIER3_CARD_COUNT: String
  }
}

package "com.splendor.exception" {
  class ConfigException
}

IConfigProvider <|.. FileConfigProvider
ConfigValidator ..> IConfigProvider : uses
ConfigValidator ..> ConfigException : throws
FileConfigProvider ..> ConfigException : throws

@enduml
